--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,13 @@
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
-           <version>11.1.0</version> <!-- Use the latest version available -->
+           <version>11.1.0</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>6.20.5</version>
        </dependency>
-
        <dependency>
            <groupId>jakarta.mail</groupId>
            <artifactId>jakarta.mail-api</artifactId>
